2004-01-10 Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* src/SDCCast.c (decorateType): fixed bug #874046

2004-01-09  Borut Razem <borut.razem@siol.net>

	* support/scripts/sdcc.nsi: remove previous installation

2004-01-09 Frieder Ferlemann <Frieder.Ferlemann@web.de>

	* src/SDCCglue.c (createInterruptVect): don't append 7(5) padding
	bytes for last interrupt vector (mcs51)
	* sdcc.spec: fixed typo
	
2004-01-09 Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* src/mcs51/gen.c (genFunction, genEndFunction, genReceive, getTempRegs,
	gen51Code): more efficient parameter receive for --model-large
	("bug" #845294)

2004-01-09 Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* src/ds390/main.c,
	* src/z80/main.c: added missed needLinkerScript flags (more than
	one port structure defined in these file)
	* src/ds390/gen.c (aopForSym, aopOp, operandsEqu, aopOp3): fixed
	bug #795325

2004-01-08 Vangelis Rokas <vrokas@otenet.gr>

	* src/SDCCmain.c: removed various references to DEFAULT_PORT
	* src/port.h: added flag needLinkerScript in port->linker
	structure to inform whether to create a .lnk file or not,
	* src/avr/main.c,
	* src/ds390/main.c,
	* src/hc08/main.c,
	* src/mcs51/main.c,
	* src/pic/main.c,
	* src/pic16/main.c,
	* src/xa51/main.c,
	* src/z80/main.c: changed appropriately to configure
	needLinkerScript flag
	* src/pic/gen.c,
	* src/pic16/gen.c (genAddrOf): fixed bug #863624
	* src/pic/glue.c: added variable udata_section_name to
	override default uninitialized data segment definition for
	devices only with SHAREBANK memory (reported from Erik Epetrich)
	* (pic14emitOverlay): modified to emit a commented overlay segment
	directive when no overlay data exist
	* (picglue): modified to emit uninitialized data segment
	according to udata_section_name
	* src/pic/main.c (_pic14_parseOptions): added command line
	options --udata-section-name=[name] to override default
	udata definition name
	* modified _linkCmd and _asmCmd to include compiler passed