@@ -1,3 +1,8 @@
+2004-01-09  Borut Razem <borut.razem@siol.net>
+
+	* src/SDCCmain.c : fixed #872250: -l command line defined library
+	  files are scanned before standard library files
+
 2004-01-10 Erik Petrich <epetrich@ivorytower.norman.ok.us>
 
 	* src/SDCCast.c (decorateType): fixed bug #874046
